# melody-to-arrangement

./: LICENSE  README.md  pyproject.toml
final_test/: output_balanced.mid  output_conservative.mid  output_creative.mid  run_arrangement.py  test_report.md  validate_midi.py
knowledge/: 01-实用乐理基础.md  02-和声与和弦进行.md  03-节奏与鼓组模式.md  04-编曲理论与实践.md  05-MIDI编曲与工具链.md  06-音频转MIDI工具.md  07-RAG数据库设计方案.md  08-项目架构设计.md  brave_search.py  fetch_and_extract.py  gen_arrangement_knowledge.py  gen_chord_progressions.py  gen_melody_accompaniment.py  gen_mood_mappings.py  gen_rhythm_bass.py  gen_section_tension.py  gen_song_analyses.py  gen_theory_data.py  search_queries.py
melody_architect/: __init__.py  arrangement.py  cli.py  creativity.py  gui.py  harmony.py  logic_export.py  models.py  theory.py
src/arranger/: cli.py
src/arranger/analysis/: __init__.py  melody.py  structure.py
src/arranger/engine/: __init__.py  arrange.py  llm.py  tools.py
src/arranger/guardrails/: __init__.py  harmony_guard.py  key_guard.py  range_guard.py  rhythm_guard.py  validator.py
src/arranger/midi/: __init__.py  builder.py  merge.py  parser.py
src/arranger/models/: __init__.py  arrangement.py  guardrail.py  note.py  pattern.py
tests/: conftest.py  test_analysis.py  test_arrange.py  test_logic_export.py  test_melody_architect.py  test_midi.py  test_models.py  test_patterns.py  test_pipeline_and_cli.py  test_web_api.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  Root.tsx  i18n.ts  index.css  main.tsx  midi-elements.d.ts  theme.css
(+60 files in other folders)
