[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "logic-pro-audio-arranger"
version = "2.0.0"
description = "Rule-constrained LLM MIDI arranger — music theory guardrails + LLM strategy router"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mido>=1.3",
  "pydantic>=2.0",
  "click>=8.0",
  "numpy>=1.26",
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
audio = []  # basic-pitch needs tensorflow; install manually if needed
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.28"]

[project.scripts]
arranger = "arranger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arranger"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
